--- a/Changes
+++ b/Changes
@@ -1,5 +1,16 @@
 Changes for DateTime::Set
 
+0.13
+- added tests for set operations with recurrences/add
+
+0.12
+- iterator passes all tests
+- the API is complete, as described in SYNOPSIS
+- small fix in add() syntax; accepts a duration=> parameter
+
+0.11
+- iterator, next
+
 0.10
 - union, intersection
 
