--- a/Changes
+++ b/Changes
@@ -1,5 +1,20 @@
 Changes for DateTime::Set
 
+0.17
+- previous() method (quite untested)
+
+0.16
+- small API changes
+
+0.15
+- revised docs, from Dave Rolsky
+- small bugfix in creating open spans
+
+0.14
+- added DateTime::Span and DateTime::SpanSet
+- put "..." to mark where we need more docs
+- DateTime::Set and DateTime::Span API look ok.
+
 0.13
 - added tests for set operations with recurrences/add
 
