--- a/TODO
+++ b/TODO
@@ -1,2 +1,31 @@
-- Document the part of the API that was inherited from Set::Infinite. 
+- discuss functions like 
+    is_infinite
+    is_empty 
+    start_is_close 
+    end_is_open
+
+    cardinality ?
+
+- Tests for DateTime::Span
+
+- Tests for DateTime::SpanSet
+
+- New constructors-from-duration API:
+
+    $set2 = DateTime::Span->new( 
+        start => $date1, 
+        end => $date2 );                 # OK
+    $set2 = DateTime::Span->new( 
+        start => $date1, 
+        duration => $dt_duration );      # TODO
+
+    $set1 = DateTime::SpanSet->new( 
+        sets => [ $dt_set, $dt_set ] );  # OK
+    $set1 = DateTime::SpanSet->new( 
+        spans => [ $dt_span, $dt_span ], 
+        duration => $dt_duration );      # TODO
+    $set1 = DateTime::SpanSet->new(
+        dates => [ $dt_span, $dt_span ],
+        duration => $dt_duration );      # TODO
+
 
