Import of FGLOCK/DateTime-Set-0.00_20 from CPAN.
gitpan-cpan-distribution: DateTime-Set
gitpan-cpan-version:      0.00_20
gitpan-cpan-path:         FGLOCK/DateTime-Set-0.00_20.tar.gz
gitpan-cpan-author:       FGLOCK
gitpan-cpan-maturity:     developer

--- a/Changes
+++ b/Changes
@@ -1,5 +1,18 @@
 Changes for DateTime::Set
 
+0.20
+- Docs for DateTime::SpanSet API 
+  (not implemented)
+
+0.19
+- DateTime::Span API: 
+  from_datetime_and_duration, from_datetimes
+
+0.18
+- changes docs, changed API
+  from_recurrence, from_datetimes, new()
+- as_list
+
 0.17
 - previous() method (quite untested)
 
