--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Changes for DateTime::Set
 
+0.03     2003-04-23
+- fix a hardcoded '-inf' in t/09spanset.t.  Eric Cholet
+- requires DateTime.pm 0.09.  Eric Cholet
+
 0.02     2003-04-20
 - removed some calls to 'new'
 - added many methods from DT::Event::Recurrence
