--- a/Changes
+++ b/Changes
@@ -1,8 +1,13 @@
 Changes for DateTime::Set
 
+0.07     2003-05-23
+- some tweaking on intersection, union, and in the recurrence generator.
+- more tests
+
+0.06     2003-05-14
 - added 'use warnings' in some tests, added DateTime 0.12 prereq.
 
-0.04
+0.04     2003-05-12
 - change "closest" code to avoid duration comparison
 
 0.03     2003-04-27
