--- a/Changes
+++ b/Changes
@@ -1,5 +1,11 @@
 Changes for DateTime::Set
 
+0.08     2003-05-30
+- recurrence set intersection uses 'current'
+- fixed a number of methods in DateTime::Span, including intersection,
+intersects, contains, union, and complement, all of which called the
+non-existent DateTime::Set->new method.  Dave Rolsky.
+
 0.07     2003-05-23
 - some tweaking on intersection, union, and in the recurrence generator.
 - more tests
