--- a/TODO
+++ b/TODO
@@ -1,19 +1,27 @@
-- remove negative-duration hacks - check if there are bugs in DT::Duration!
+TODO list for DT::Set, DT::Span, and DT::SpanSet
 
-- intersection() function composition in DateTime::Set
-    - check 'span'
-    - add tests
-    - 'union' too ?
+- DT::Set needs a fix to avoid generating _huge_ in-memory sets,
+  when the result of an operation is a finite set.
+  For example: "every minute in year 2003"
+  (see SKIP in DateTime::Incomplete t/02incomplete.t)
 
-- check 'span' in next/previous methods
-    - add tests
+- implement as_list() in DT::SpanSet.pm
 
-- as_list in SpanSet.pm
-- previous in SpanSet for iterators
+- implement previous() in DT::SpanSet.pm
 
 - discuss functions like 
     is_infinite
     is_empty 
-
     cardinality ?
+
+- implement faster DT::Set::complement(), 
+  using 'function composition'
+
+- move all 'set-specific' code to Set::Infinite::_recurrence 
+
+- functions like before(), after(), during() might be useful
+  in DT::Span
+
+- tests for DT::Span and DT::SpanSet 'duration()'
+- duration() returns 'Inf' scalar - should be a DT::Duration::Infinite
 
