--- a/Changes
+++ b/Changes
@@ -1,5 +1,17 @@
 Changes for DateTime::Set
 
+0.10   2003-09-02
+- DateTime::Span->duration now uses the new subtract_datetime_absolute
+method, which means that the duration is always given in seconds.
+
+- supports _huge_ recurrence sets (not infinite) with "virtual" elements.
+  these sets have 'undef' count.
+  Experimental - mostly untested !
+  this adds support for sets like 'all seconds in 2003'
+
+- faster recurrence intersection
+- count returns 'undef' for infinite sets.
+
 0.09    2003-08-18
 - added DT::Set count() 
 - fixed DT::SpanSet duration()
