Import of FGLOCK/DateTime-Set-0.12 from CPAN.
gitpan-cpan-distribution: DateTime-Set
gitpan-cpan-version:      0.12
gitpan-cpan-path:         FGLOCK/DateTime-Set-0.12.tar.gz
gitpan-cpan-author:       FGLOCK
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Changes for DateTime::Set
 
+0.12   2003-09-22
+- implement previous() in DT::SpanSet.pm
+- Fixed: set_time_zone would mutate a clone.
+
 0.11   2003-09-19
 - Fixed callback return value on set_time_zone. 
   This caused the start date to be equal to the end date.
