Import of FGLOCK/DateTime-Set-0.1202 from CPAN.
gitpan-cpan-distribution: DateTime-Set
gitpan-cpan-version:      0.1202
gitpan-cpan-path:         FGLOCK/DateTime-Set-0.1202.tar.gz
gitpan-cpan-author:       FGLOCK
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Changes for DateTime::Set
 
+0.1202  2003-09-24
+- fixed set_time_zone and add_duration: 
+  was not clearing 'next' upon return, when arg was a recurrence.
+
 0.1201  2003-09-24
 - optimized contains() and intersects() when arg is a datetime
 - recurrence constructor always adds '->clone' to recurrence function 
