Import of FGLOCK/DateTime-Set-0.1203 from CPAN.
gitpan-cpan-distribution: DateTime-Set
gitpan-cpan-version:      0.1203
gitpan-cpan-path:         FGLOCK/DateTime-Set-0.1203.tar.gz
gitpan-cpan-author:       FGLOCK
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,14 @@
 Changes for DateTime::Set
 
+- added more tests for add_duration, subtract_duration
+- added set( locale => .. ) to DateTime::Set
+
+0.1203  2003-09-26
+- Added docs to Set::Infinite::_recurrence;
+  split into a separate file such that it doesn't mix the pods
+- refactored union / intersection
+- _is_recurrence test prevents error when programming subroutine methods
+
 0.1202  2003-09-24
 - fixed set_time_zone and add_duration: 
   was not clearing 'next' upon return, when arg was a recurrence.
