--- a/TODO
+++ b/TODO
@@ -1,5 +1,7 @@
 TODO list for DT::Set, DT::Span, and DT::SpanSet
 
+- implement set( locale => .. ) in Span and SpanSet
+
 - implement as_list() in DT::SpanSet.pm
 
 - discuss functions like 
