Import of FGLOCK/DateTime-Set-0.17 from CPAN.
gitpan-cpan-distribution: DateTime-Set
gitpan-cpan-version:      0.17
gitpan-cpan-path:         FGLOCK/DateTime-Set-0.17.tar.gz
gitpan-cpan-author:       FGLOCK
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Changes for DateTime::Set
 
+0.17    2004-08-17
+- bugfix: it was trying to set the time zone of an "undef" value; 
+  this has broken some DT::Event::Recurrence tests - reported by Bill Moseley
+
 0.1603  2004-07-05
 - revised documentation, some examples were rewritten.
 - deprecate "iterate" method
