--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Changes for DateTime::Set
 
+0.28   2009-07-19
+- optimized DateTime::Set->as_list().
+  This works around a segfault reported by Nils Grunwald.
+
 0.27   2009-04-02
 - fixed DateTime::Spanset duration() method.
   Reported by Anton Berezin <tobez@tobez.org>
